fixed alignment of base-header

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -4,6 +4,10 @@
     background: url("../../images/min_backgr.png") no-repeat fixed center !important;
 }
 
+.baseHeader {
+    padding-top: 4em;
+}
+
 .imageHolder {
     max-width: 20em !important;
     max-height: 20em !important;
